# WxChatCapture

./: .env.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_ORGANIZATION_REPORT.md  FINAL_FILE_ORGANIZATION_REPORT.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES_v3.0.6.md  evidence_database.db  pyproject.toml  requirements.txt  tmp_rovodev_performance_analysis.py
config/: MANIFEST.in  Makefile  __init__.py  requirements.txt
docs/: CHANGELOG.md  FINAL_FILE_ORGANIZATION_REPORT.md
docs_unified/: 00_文档整理总结.md  01_快速开始指南.md  02_安装配置指南.md  03_功能使用指南.md  04_录屏功能指南.md  05_故障排除指南.md  06_开发环境指南.md  07_API参考手册.md  08_技术实现详解.md  09_项目架构总结.md  10_法律合规指南.md  11_版本更新历史.md  12_文档维护指南.md  13_贡献指南.md  14_项目文件结构.md  15_文档迁移说明.md  16_文档清理报告.md  17_文档梳理完成报告.md  CHANGELOG.md  FINAL_FILE_ORGANIZATION_REPORT.md  README.md  RELEASE_NOTES_v3.0.6.md  tools_README.md
scripts/: __init__.py  install_deps.bat  install_free_compliance.bat  run.bat  run_simple.bat  run_tool.bat
src/: __init__.py  advanced_screenshot_manager.py  config.py  enhanced_legal_compliance.py  evidence_recorder.py  legal_compliance.py  main.py  optimized_recording_manager.py  optimized_screenshot_manager.py  utils.py  wechat_detector.py
tests/: __init__.py  test_main_fixed.py  test_performance.py  test_recording.py  test_ui.py
tools/: README.md  __init__.py  check_imports.py  debug_run.py  quick_start.py  simple_test.py
